1.10.10 Task: Use CCPath and FSPath everywhere [WIP]